project(template)
set(LIB_SRC max.cpp)
#set(LIB_SRC Compare.cpp)
add_library(libCompare ${LIB_SRC})
#set(src main.cpp max.cpp)
set(src main.cpp )
set(CMAKE_CXX_FLAGS "-std=c++11")
#SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
#SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
#include_directories(./)
add_executable(main ${src})
target_link_libraries(main libCompare)